--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,7 +32,7 @@ jobs:
         verify_metadata: true
         skip_existing: true
         packages_dir: mlcube/dist/
-        repository_url: https://upload.pypi.org/legacy/
+        repository_url: https://test.pypi.org/legacy/
         verbose: true
       env:
         LOGLEVEL: DEBUG
