--- a/.github/workflows/runner-publish.yml
+++ b/.github/workflows/runner-publish.yml
@@ -32,7 +32,7 @@ jobs:
         verify_metadata: true
         skip_existing: true
         packages_dir: runners/mlcube_ssh/dist/
-        repository_url: https://upload.pypi.org/legacy/
+        repository_url: https://test.pypi.org/legacy/
       env:
         LOGLEVEL: DEBUG
 
@@ -60,7 +60,7 @@ jobs:
         verify_metadata: true
         skip_existing: true
         packages_dir: runners/mlcube_docker/dist/
-        repository_url: https://upload.pypi.org/legacy/
+        repository_url: https://test.pypi.org/legacy/
         verbose: true
       env:
         LOGLEVEL: DEBUG
@@ -89,7 +89,7 @@ jobs:
         verify_metadata: true
         skip_existing: true
         packages_dir: runners/mlcube_singularity/dist/
-        repository_url: https://upload.pypi.org/legacy/
+        repository_url: https://test.pypi.org/legacy/
         verbose: true
       env:
         LOGLEVEL: DEBUG
@@ -118,7 +118,7 @@ jobs:
         verify_metadata: true
         skip_existing: true
         packages_dir: runners/mlcube_k8s/dist/
-        repository_url: https://upload.pypi.org/legacy/
+        repository_url: https://test.pypi.org/legacy/
         verbose: true
       env:
         LOGLEVEL: DEBUG
@@ -147,7 +147,7 @@ jobs:
         verify_metadata: true
         skip_existing: true
         packages_dir: runners/mlcube_gcp/dist/
-        repository_url: https://upload.pypi.org/legacy/
+        repository_url: https://test.pypi.org/legacy/
         verbose: true
       env:
         LOGLEVEL: DEBUG
@@ -176,7 +176,7 @@ jobs:
           verify_metadata: true
           skip_existing: true
           packages_dir: runners/mlcube_kubeflow/dist/
-          repository_url: https://upload.pypi.org/legacy/
+          repository_url: https://test.pypi.org/legacy/
           verbose: true
         env:
           LOGLEVEL: DEBUG
