--- a/.github/workflows/runner-publish.yml
+++ b/.github/workflows/runner-publish.yml
@@ -29,10 +29,10 @@ jobs:
     - name: Publish
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        verify_metadata: true
-        skip_existing: true
-        packages_dir: runners/mlcube_docker/dist/
-        repository_url: https://test.pypi.org/legacy/
+        verify-metadata: true
+        skip-existing: true
+        packages-dir: runners/mlcube_docker/dist/
+        repository-url: https://test.pypi.org/legacy/
         verbose: true
       env:
         LOGLEVEL: DEBUG
