--- a/.github/workflows/runner-publish.yml
+++ b/.github/workflows/runner-publish.yml
@@ -36,3 +36,32 @@ jobs:
         verbose: true
       env:
         LOGLEVEL: DEBUG
+        
+  gcp_runner_deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+    - name: Build distribution
+      run: |
+        cd runners/mlcube_gcp
+        python setup.py sdist bdist_wheel
+    - name: Publish
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        verify-metadata: true
+        skip-existing: true
+        packages-dir: runners/mlcube_gcp/dist/
+        repository-url: https://upload.pypi.org/legacy/
+        verbose: true
+      env:
+        LOGLEVEL: DEBUG
